added ActionCompletedEvent, because no intro message appeared due to no event